--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,20 @@
 apply plugin: 'com.android.application'
 
-//Gradle sync failed 라고 떠서 추가 했습니다.
 buildscript {
     repositories {
-        jcenter()
+        jcenter() // or mavenCentral()
     }
-    dependencies {
 
+    dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
     }
 }
-//
-
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "yoonjh.a170104_camera_01"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -29,12 +26,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    //Gradle sync failed 라고 떠서 추가 했습니다.
     repositories {
         maven { url 'http://repo1.maven.org/maven2' }
     }
-    //
 }
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -42,7 +38,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.tsengvn:Typekit:1.0.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    testCompile 'junit:junit:4.12'
 }
