--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,20 @@
 apply plugin: 'com.android.application'
-
 buildscript {
-    repositories {
-        jcenter() // or mavenCentral()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
-    }
+        repositories {
+               jcenter()
+        }
+        dependencies {
+               classpath 'com.android.tools.build:gradle:2.3.1'
+        }
 }
+
 android {
-    compileSdkVersion 24
-    buildToolsVersion "25.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "yoonjh.a170104_camera_01"
-        minSdkVersion 19
-        targetSdkVersion 24
+        applicationId "kr.co.edu_a.mooil"
+        minSdkVersion 16
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -31,15 +30,15 @@ android {
     }
 }
 
-
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.github.bumptech.glide:glide:3.6.0'
-    compile 'com.tsengvn:Typekit:1.0.0'
-
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.tsengvn:typekit:1.0.1'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.chrisbanes.photoview:library:1.2.4'
     testCompile 'junit:junit:4.12'
 }
