--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,27 +1,36 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="kr.co.edu_a.mooil">
+    package="kr.co.edu_a.mooil">
 
-<application
-    android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:supportsRtl="true"
-    android:theme="@style/AppTheme"
-    android:name=".CustomFontStartApp">
-    <activity android:name=".IntroActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-    <activity android:name=".MainActivity"/>
-    <activity android:name=".EditActivity" />
-    <activity android:name=".NewActivity" />
-    <activity android:name=".FileExplorer" android:configChanges="orientation|screenSize"/>
-    <activity android:name=".Memorize" />
-</application>
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera" />
+
+    <application
+        android:name=".CustomFontStartApp"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".IntroActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".EditActivity" />
+        <activity android:name=".NewActivity" />
+        <activity
+            android:name=".FileExplorer"
+            android:configChanges="orientation|screenSize" /> <!--Preventing the intent from initializing when rotating a device.-->
+        <activity android:name=".Memorize" />
+        <activity android:name=".PinchZoom" />
+        <activity android:name=".PDFRenderer" />
+
+    </application>
 
 </manifest>
